refactor: handlerMapping 인터페이스 구현 메서드 시그니처 수정